# pa

./: .env.dev.example  .gitignore  Dockerfile.dev  README.md  channels.json  docker-compose.dev.yml  docker-compose.override.example.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: ARCHITECTURE.md  ASYNC_BLOCKING_AUDIT.md  ASYNC_BOUNDARY_INVENTORY.md  ASYNC_CONCURRENCY.md  CARD_DISPOSITIONS.md  DEPLOYMENT.md  INTEGRATIONS.md  MAC_MINI_AUTONOMY.md  MULTI_MACHINE.md  MVP_FEATURES.md  PR_SUPERVISOR.md  RELEASE_NOTES_TEMPLATE.md
examples/: plugin_example.py
releases/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.11.md  v0.2.12.md  v0.2.13.md  v0.2.14.md  v0.2.15.md  v0.2.16.md  v0.2.17.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
scripts/: audit_async_boundaries.py  dev.sh  install-remote.sh  install.sh  measure_async_responsiveness.py  release.sh
tests/: test_acp_client.py  test_acp_providers.py  test_acp_stdio_limit.py  test_agent_chat_sse.py  test_agent_chat_stream_join.py  test_agent_history_sidebar.py  test_agent_session_live_events.py  test_async_responsiveness.py  test_async_runtime.py  test_async_subprocess.py  test_auth_middleware.py  test_browser.py  test_card_disposition.py  test_card_version_sync.py  test_card_work_ux.py  test_chat_images.py  (+25 more)
(+176 files in other folders)
