[project]
name = "pa"
version = "0.2.1"
description = "Human–agent orchestration: goals, tasks, knowledge, and distributed coordination"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "asyncssh>=2.14.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "mcp>=1.9.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.8.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
]

[project.scripts]
pa = "pa.cli.main:app"

[project.entry-points."pa.modules"]
# External plugins register here, e.g.:
# my-plugin = "my_pa_plugin.module:MyModule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pa"]

[tool.hatch.build.targets.sdist]
only-include = ["src/pa"]
